--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "dist",
     "README.md"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yourusername/date-normalizer.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yourusername/date-normalizer/issues"
-  },
-  "homepage": "https://github.com/yourusername/date-normalizer#readme"
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  }
 }
