--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "npm run build"
+    "prepare": "tsc"
   },
   "keywords": [
     "date",
@@ -35,12 +35,5 @@
   "files": [
     "dist",
     "README.md"
-  ],
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
-    }
-  }
+  ]
 }
